# MED

./: .gitignore  Lab_1.ipynb  README.md  pyproject.toml  requirements.txt  sample.ipynb
MED_LAB_1/: Lab2_zad1.ipynb  Lab_1.ipynb  Lab_1_2.ipynb  Lab_1_zad2.ipynb  Lab_2.ipynb  lab1_zad2_info.md  lab1_zad2_info.txt  raw_code.py  testing.py
MED_LAB_1/.ipynb_checkpoints/: Lab2_zad1-checkpoint.ipynb  Lab_1-checkpoint.ipynb  Lab_1_zad2-checkpoint.ipynb
MED_LAB_1/additional_info/: Info_do_predyckji.md  denisty.py  new_test.py  raw_code.py  testing.py
MED_LAB_2/: Lab2_zad3.ipynb  Lab2_zad4.ipynb  Lab_2_1.py  Lab_2_2.ipynb  Lab_2_2_fin.ipynb  Lab_2_2_fin.py  Lab_2_2_test_old.ipynb  Lab_2_3.ipynb  Lab_2_3.py  Lab_2_4.ipynb  Lab_2_4.py  testing_ground.py
MED_LAB_2/.ipynb_checkpoints/: Lab2_zad3-checkpoint.ipynb  Lab_2_4-checkpoint.ipynb
Testing/: 2_4_Classifier.py  Test_2.py
