[tool.poetry]
name = "med-lab1"
version = "0.1.0"
description = ""
authors = ["Floressek <szymon.florek@student.wat.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
